"Added App Widget"

--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -12,6 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MuseCMEB"
         tools:targetApi="31">
+        <receiver
+            android:name=".NewAppWidget"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/new_app_widget_info" />
+        </receiver>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -24,8 +36,7 @@
         <activity
             android:name=".Session"
             android:exported="true"
-            android:parentActivityName=".Session">
-        </activity>
+            android:parentActivityName=".Session"></activity>
     </application>
 
 </manifest>
